--- a/app/src/main/res/layout/activity_view_all_bills.xml
+++ b/app/src/main/res/layout/activity_view_all_bills.xml
@@ -18,7 +18,20 @@
         android:background="@drawable/edittext_border"
         android:id="@+id/edtSearchBill"/>
 
+    <TextView
+        android:id="@+id/txtNotFound"
+        android:visibility="gone"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:textSize="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="Search Result Not Found!"
+        />
+
     <androidx.recyclerview.widget.RecyclerView
+
         android:layout_below="@+id/edtSearchBill"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
