--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -6,7 +6,7 @@
 
     <!--    <style name="Theme.GSTBillingApp" parent="Base.Theme.GSTBillingApp" />-->
 
-    <style name="Theme.GSTBillingApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.GSTBillingApp" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorSecondary">@color/purple_700</item>
@@ -14,6 +14,8 @@
         <item name="android:statusBarColor">@color/white</item>
         <!-- Customize your theme here. -->
         <item name="android:windowLightStatusBar" tools:ignore="NewApi">false</item>
+        <item name="fontFamily">@font/amaranth</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
     </style>
     <style name="btnTheme" parent="Widget.AppCompat.Button">
         <item name="round">15dp</item>
