sample test added

--- a/app/src/main/res/layout/pdf_item.xml
+++ b/app/src/main/res/layout/pdf_item.xml
@@ -46,6 +46,7 @@
                 />
 
         </LinearLayout>
+<!--        my name is adiya-->
         <ImageView
             android:id="@+id/mPdfDeleteBtn"
             android:layout_width="25dp"
