--- a/app/src/main/res/layout/pdf_item.xml
+++ b/app/src/main/res/layout/pdf_item.xml
@@ -47,6 +47,7 @@
 
         </LinearLayout>
 <!--        my name is adiya-->
+<!--        my name is chetan-->
         <ImageView
             android:id="@+id/mPdfDeleteBtn"
             android:layout_width="25dp"
