--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,7 +13,7 @@
         <item name="colorAccent">@color/teal_200</item>
         <item name="android:statusBarColor">@color/white</item>
         <!-- Customize your theme here. -->
-        <item name="android:windowLightStatusBar" tools:ignore="NewApi">false</item>
+<!--        <item name="android:windowLightStatusBar" tools:ignore="NewApi">false</item>-->
         <item name="fontFamily">@font/amaranth</item>
     </style>
     <style name="btnTheme" parent="Widget.AppCompat.Button">
