--- a/app/src/main/res/layout/activity_create_new_bill.xml
+++ b/app/src/main/res/layout/activity_create_new_bill.xml
@@ -137,7 +137,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Enter Details Manually"
+                    android:text="Add New Customer Details"
                     android:textColor="@color/black"
                     android:textSize="25dp"
                     android:textStyle="bold" />
