--- a/app/src/main/res/layout/added_items.xml
+++ b/app/src/main/res/layout/added_items.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content">
 
     <LinearLayout
+        android:layout_toLeftOf="@id/miDelete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -32,6 +33,14 @@
         android:textColor="@color/black"
         android:id="@+id/miProductSanNo"
         />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="quant"
+            android:textColor="@color/black"
+            android:id="@+id/miProductQuantity"
+            />
 
     </LinearLayout>
     <ImageView
