--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -5,8 +5,14 @@
     android:layout_margin="5dp"
     app:cardCornerRadius="9dp"
     android:layout_height="wrap_content">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
 
     <LinearLayout
+        android:layout_toLeftOf="@+id/mProductDeleteBtn"
+        android:layout_toRightOf="@+id/mProductEditBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
@@ -43,15 +49,15 @@
         android:layout_height="25dp"
         android:layout_marginRight="10dp"
         android:src="@drawable/baseline_delete_24"
-        android:layout_gravity="end | center_vertical"/>
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"/>
     <ImageView
         android:id="@+id/mProductEditBtn"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginLeft="10dp"
         android:src="@drawable/baseline_edit_24"
-        android:layout_gravity="start | center_vertical"/>
-
-
-
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"/>
+    </RelativeLayout>
 </androidx.cardview.widget.CardView>
