--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -6,14 +6,14 @@
 
     <!--    <style name="Theme.GSTBillingApp" parent="Base.Theme.GSTBillingApp" />-->
 
-    <style name="Theme.GSTBillingApp" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="Theme.GSTBillingApp" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorSecondary">@color/purple_700</item>
         <item name="colorAccent">@color/teal_200</item>
         <item name="android:statusBarColor">@color/white</item>
         <!-- Customize your theme here. -->
-<!--        <item name="android:windowLightStatusBar" tools:ignore="NewApi">false</item>-->
+        <item name="android:windowLightStatusBar" tools:ignore="NewApi">false</item>
         <item name="fontFamily">@font/amaranth</item>
     </style>
     <style name="btnTheme" parent="Widget.AppCompat.Button">
