--- a/app/src/main/res/layout/activity_create_new_bill.xml
+++ b/app/src/main/res/layout/activity_create_new_bill.xml
@@ -93,10 +93,47 @@
                 android:background="@color/black" />
 
             <LinearLayout
+                android:id="@+id/invicelayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_below="@id/sep1"
+                android:orientation="vertical">
+                <Switch
+                    android:id="@+id/autoGenerateSwitch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Auto Generate Invoice No."
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/amaranth"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"/>
+
+                <EditText
+                    android:layout_marginBottom="5dp"
+                    android:id="@+id/manualInvoiceEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/edittext_border"
+                    android:hint="Manual Invoice No."
+                    android:padding="15dp"
+                    android:visibility="gone" />
+            </LinearLayout>
+
+            <View
+                android:id="@+id/sep9"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_below="@+id/invicelayout"
+                android:background="@color/black" />
+
+
+            <LinearLayout
                 android:id="@+id/custlayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/sep1"
+                android:layout_below="@id/sep9"
                 android:orientation="vertical">
 
                 <TextView
